Fix contrast color issues

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -3,10 +3,10 @@ $font-size: 14pt;
 $font-family: Helvetica, Arial, sans;
 
 $primary-font-color: #191017;
-$secondary-font-color: #6C757D;
-$primary-action-color: #4785AE;
+$secondary-font-color: #505860;
+$primary-action-color: #125f85;
 $primary-action-focus-color: #003078;
-$secondary-action-color: #AE76A6;
+$secondary-action-color: #794573;
 $action-font-color: #FFF;
 $background-color: #FFF;
 
